fixed astrospices image overlapping with navbar

--- a/css/foodships.css
+++ b/css/foodships.css
@@ -180,7 +180,6 @@ a {
 
 
 .food-image{
-    position: relative;
     margin-top: 0;
     width: 100%;
     opacity: 60%;
